[metadata]
name = myp_trip_parser-Pierre-vo
version = 0.0.1
author = Pierre V.
author_email = 746601+pierre-vo@users.noreply.github.com
description = Parser for mypeugeot csv dumps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pierre-vo/myp_trip_parser
project_urls =
    Bug Tracker = https://github.com/pierre-vo/myp_trip_parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src